<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ConditionActivity">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_green" />

    <TextView
        android:id="@+id/tvWhatWould"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/what_would_you_do"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/ivCondition"
        app:layout_constraintStart_toStartOf="@+id/ivCondition"
        app:layout_constraintTop_toBottomOf="@+id/ivCondition" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/tvWhatWould"
        app:layout_constraintStart_toStartOf="@+id/tvWhatWould"
        app:layout_constraintTop_toBottomOf="@+id/tvWhatWould">

        <RadioButton
            android:id="@+id/rbImmediately"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_doctor_immediately" />


        <RadioButton
            android:id="@+id/rbAfterFewDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_doctor_few_days" />

        <RadioButton
            android:id="@+id/rbNever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_see_doctor" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvWhy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/why_did_you_choose"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/ivCondition"
        app:layout_constraintStart_toStartOf="@+id/ivCondition"
        app:layout_constraintTop_toBottomOf="@+id/rgGender" />

    <EditText
        android:id="@+id/etResponse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="200"
        android:minLines="3"
        android:singleLine="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWhy" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/teal_200"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>