<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SymptomsActivity">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/teal_200"
        android:onClick="nextStep"
        android:text="@string/next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSymptoms"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/llOR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minWidth="40dp"
        android:minHeight="40dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/rvSymptoms"
        app:layout_constraintBottom_toBottomOf="@+id/rvSymptoms"
        app:layout_constraintEnd_toEndOf="@+id/rvSymptoms"
        app:layout_constraintStart_toStartOf="@+id/rvSymptoms" />

    <LinearLayout
        android:id="@+id/llOR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rvSymptoms">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:background="@color/border_gray" />

        <TextView
            android:id="@+id/tvOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/text_or"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:background="@color/border_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOR">

        <EditText
            android:id="@+id/etAddSymptom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:hint="@string/add_symptom"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1.5"
            android:background="@color/teal_200"
            android:text="@string/add"
            android:onClick="addSymptom"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>